[package]
name = "cube-game"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ioannuwu"
license = "MIT"

[dependencies]
server_bin = { path = "server_crates/server_bin" }
client_bin = { path = "client_crates/client_bin" }

[workspace]
members = ["client_crates/*", "server_crates/*", "common_crates/*"]

[workspace.dependencies]

# Common crates
basic = { path = "common_crates/basic" }
protocol = { path = "common_crates/protocol" }
connection = { path = "common_crates/connection" }

# Client crates
textures = { path = "client_crates/textures" }
camera = { path = "client_crates/camera" }
window = { path = "client_crates/window" }
client_world = { path = "client_crates/client_world" }
client_network = { path = "client_crates/client_network" }
client_state = { path = "client_crates/client_state" }
gameplay = { path = "client_crates/gameplay" }

# Server crates
server_network = { path = "server_crates/server_network" }

# External crates
serde = { version = "1.0.183", features = ["derive"] }
bevy_renet = "0.0.9"
bevy = "0.11.0"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
