[package]
name = "cube-game"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ioannuwu/cube-game"
license = "MIT"

[dependencies]
server_bin = { path = "server_crates/server_bin" }
client_bin = { path = "client_crates/client_bin" }

[workspace]
members = ["client_crates/*", "server_crates/*", "common_crates/*", "test_crates/*"]

[workspace.dependencies]

# Common crates
basic = { path = "common_crates/basic" }
block = { path = "common_crates/block" }
chunk = { path = "common_crates/chunk" }
item = { path = "common_crates/item" }
block_item = { path = "common_crates/block_item" }
common_world = { path = "common_crates/common_world" }
protocol = { path = "common_crates/protocol" }
common_network = { path = "common_crates/common_network" }
math = { path = "common_crates/math" }

# Client crates
textures = { path = "client_crates/textures" }
camera = { path = "client_crates/camera" }
window = { path = "client_crates/window" }
client_world = { path = "client_crates/client_world" }
client_network = { path = "client_crates/client_network" }
client_state = { path = "client_crates/client_state" }
client_gameplay = { path = "client_crates/client_gameplay" }

# Server crates
server_network = { path = "server_crates/server_network" }
server_world = { path = "server_crates/server_world" }
server_gameplay = { path = "server_crates/server_gameplay" }

# External crates
serde = { version = "1.0.183", features = ["derive"] }
bevy = "0.11.0"
strum = { version = "0.25", features = ["derive"] }
heck = "0.5.0-rc.1"
serde_with = "3.3.0"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
