[package]
name = "client_bin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Client crates
textures.workspace = true
window.workspace = true
camera.workspace = true

# Common crates
protocol.workspace = true
basic.workspace = true

# External crates
bevy.workspace = true
