[package]
name = "client_bin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Client crates
textures.workspace = true
window.workspace = true
camera.workspace = true
client_network.workspace = true
client_gameplay.workspace = true
client_state.workspace = true

# Common crates
protocol.workspace = true
basic.workspace = true

# External crates
bevy.workspace = true
