[package]
name = "client_network"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
connection.workspace = true
protocol.workspace = true
bevy_renet.workspace = true