[package]
name = "gameplay"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Client crates
client_state.workspace = true
camera.workspace = true

# External crates
bevy.workspace = true
