[package]
name = "textures"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { workspace = true, features = ["derive-display"] }
item = { workspace = true, features = ["derive-display"] }
bevy.workspace = true
heck.workspace = true
