[package]
name = "window"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Common crates
basic.workspace = true

# External crates
bevy.workspace = true
textures.workspace = true
