[package]
name = "block"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block_item.workspace = true

serde.workspace = true
serde_with.workspace = true
strum.workspace = true

[features]
derive-display = []