[package]
name = "common_network"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common crates
protocol.workspace = true

# External crates
bevy_renet = "0.0.9"
bevy.workspace = true
strum.workspace = true

[features]
server = []
client = []
