[package]
name = "protocol"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External crates
serde_json = "1.0.104"
bevy = { workspace = true, features = ["serialize"]}
serde.workspace = true

# Common crates
basic.workspace = true
block.workspace = true
world.workspace = true
