[package]
name = "protocol"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External crates
serde_json = "1.0.104"
math.workspace = true
serde.workspace = true

# Common crates
basic.workspace = true
block.workspace = true
chunk.workspace = true
common_world.workspace = true
