[package]
name = "server_bin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol.workspace = true
serde_json.workspace = true
basic.workspace = true