[package]
name = "server_bin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Server crates
server_network.workspace = true

# Common crates
protocol.workspace = true
basic.workspace = true

# External crates
bevy.workspace = true