[package]
name = "server_gameplay"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true

common_network.workspace = true
protocol.workspace = true

server_network.workspace = true
