[package]
name = "server_network"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
toml.workspace = true
derive-new.workspace = true
strum.workspace = true

common_network = { workspace = true, features = ["server"] }
protocol.workspace = true
config.workspace = true
