[package]
name = "server_world"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol.workspace = true
common_world.workspace = true
bevy.workspace = true
