[package]
name = "item_block_test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
strum.workspace = true
block = { workspace = true, features = ["derive-display"] }
item = { workspace = true, features = ["derive-display"] }
